[tool.poetry]
name = "snakes_cafe"
version = "0.1.0"
description = ""
authors = ["doaa-1996 <doaaobeidat1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
